[package]
name = "esuyo-markdown"
version = "0.1.0"
description = "A Tauri markdown browser app"
authors = ["you"]
edition = "2021"

[lib]
name = "esuyo_markdown_lib"
crate-type = ["lib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
